--- a/ETIM-API-Saver/ETIM-API-Saver/ETIM-API-Saver.csproj
+++ b/ETIM-API-Saver/ETIM-API-Saver/ETIM-API-Saver.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
